Fixed x overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,16 @@ section {
   border: 2px solid;
 }
 
+input[type=submit]:hover {
+  cursor: pointer;
+}
+
 /* Header */
 nav {
   display: flex;
   justify-content: space-between;
   background-image: linear-gradient(to bottom right, rgb(73, 141, 73), darkseagreen);
-  width: 100vw;
+  width: 100%;
 }
 
 .home-link {
@@ -108,8 +112,12 @@ nav a:hover {
 /* Footer */
 footer {
   background-color: lightgrey;
-  padding: 1rem;
   width: 100%;
+}
+
+footer ul {
+  padding: 1rem 1rem 1rem 1rem;
+  margin: 0;
 }
 
 /* Home Page */
@@ -127,7 +135,7 @@ footer {
   background-position: center;
   background-size: 100vw;
   height: 50vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .hero-section .content-container {
